# fibs

./: LICENSE  README.md  TAGS  bench-int.html  bench-no-opt.html  bench-small.html  bench.html  fibs.cabal  stack.yaml
src/: Main.hs
