name:                fibs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/konn/fibs#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fibs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , monad-memo
                     , containers
                     , criterion
                     , matrix
  ghc-options:         -Wall -O2 -threaded

